# efxlab

./: .gitignore  CHECKLIST.md  LOT_TRACKING_IMPLEMENTATION.md  LOT_TRACKING_INTEGRATION.md  README.md  RUNBOOK.md  pyproject.toml
.github/: copilot-instructions.md
config/: default.yaml
efxlab/: __init__.py  converter.py  decomposition.py  events.py  handlers.py  io_layer.py  logging_config.py  lot.py  lot_manager.py  main.py  processor.py  state.py
tests/: __init__.py  test_converter.py  test_events.py  test_handlers.py  test_integration.py  test_lot_integration.py  test_lot_tracking.py  test_processor.py  test_state.py
