[project]
name = "efxlab"
version = "0.1.0"
description = "Deterministic FX simulation engine for P&L and risk calculation"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=14.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "structlog>=24.1.0",
    "duckdb>=0.10.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
